# proj-mz-rjb

./: .gitignore  CMakeLists.txt  main.cpp
Users/mzake/RiderProjects/proj-mz-rjb/wpfUI/: MainWindow.xaml  MainWindow.xaml.cs  wpfUI.csproj
include/: ACVoltageSource.h  Analysis.h  Capacitor.h  Circuit.h  CircuitIO.h  CircuitSimulatorInterface.h  Component.h  CurrentSource.h  Diode.h  Inductor.h  LinearSolver.h  Node.h  Resistor.h  VoltageSource.h  export.h
src/: ACVoltageSource.cpp  Analysis.cpp  Capacitor.cpp  Circuit.cpp  CircuitIO.cpp  CircuitSimulatorInterface.cpp  Component.cpp  CurrentSource.cpp  Diode.cpp  Inductor.cpp  LinearSolver.cpp  Node.cpp  Resistor.cpp  VoltageSource.cpp  main.cpp
wpfUI/: App.xaml  App.xaml.cs  CircuitSimulatorService.cs  ComponentControl.xaml  ComponentControl.xaml.cs  ComponentValueWindow.xaml  ComponentValueWindow.xaml.cs  DCResultsWindow.xaml  DCResultsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Netlist.cs  NetlistGenerator.cs  NetlistWindow.xaml  NetlistWindow.xaml.cs  NodeControl.xaml  NodeControl.xaml.cs  PlotWindow.xaml  PlotWindow.xaml.cs  Probe.cs  SimulationParameters.cs  SimulationSettingsWindow.xaml  SimulationSettingsWindow.xaml.cs  UINode.cs  UItest.csproj  Wire.cs  wpfUI.csproj
